WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313688
REGRESSION(
306362@main
): `preventDefault` for pointer event on iOS does not stop mouse event from firing
https://bugs.webkit.org/show_bug.cgi?id=313688
Summary
REGRESSION(306362@main): `preventDefault` for pointer event on iOS does not s...
Lily Spiniolas
Reported
2026-04-29 15:00:57 PDT
rdar://174864309
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-04-29 18:49:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63938
EWS
Comment 2
2026-04-30 15:09:13 PDT
Committed
312396@main
(f375994f3f8e): <
https://commits.webkit.org/312396@main
> Reviewed commits have been landed. Closing PR #63938 and removing active labels.
EWS
Comment 3
2026-05-11 16:34:30 PDT
Committed
305413.876@safari-7624-branch
(492551c62a70): <
https://commits.webkit.org/305413.876@safari-7624-branch
> Reviewed commits have been landed. Closing PR #5156 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug