Cherry-pick f375994f3f8e. rdar://176068614

REGRESSION(306362@main): `preventDefault` for `pointerdown` on iOS does not stop `mousedown` from firing
    https://bugs.webkit.org/show_bug.cgi?id=313688
    rdar://174864309

    Reviewed by Richard Robinson and Abrar Rahman Protyasha.

    In 306362@main we began to clear the pointer capture controller when
    `[WKTouchEventsGestureRecognizer reset]` was called so that the map of
    active touches wouldn't get stuck when an external gesture recognizer
    handled the touch in a specific manner.

    However, when the screen is tapped, after `pointerdown` is dispatched,
    `PointerCaptureController::preventsCompatibilityMouseEventsForIdentifier`
    is called to see if we should also dispatch `mousedown`. Critically, this
    is done by examining the map of active touches, which now gets cleared
    before the check, thus preventing us from making thte correct determination.

    Fix the issue by only clearing the map from
    `[WKTouchEventsGestureRecognizer reset]` if the last touch's type isn't
    `WKTouchEventType::End`, indicating that the touch sequence finished abnormally.

    Tested by
    `pointerevents/ios/pointer-events-no-mousedown-when-prevent-default-called-on-pointerdown.html`

    * Source/WebKit/UIProcess/ios/WKTouchEventsGestureRecognizer.mm:
    (-[WKTouchEventsGestureRecognizer reset]):

    Canonical link: https://commits.webkit.org/312396@main

Canonical link: https://commits.webkit.org/305413.904@safari-7624.4-branch